--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,18 +7,18 @@
     tools:context=".HomeActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawerLayout"
-        android:fitsSystemWindows="true"
         android:background="#F7FFFFFF"
+        android:fitsSystemWindows="true"
         android:minWidth="19dp">
 
         <ScrollView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="#F7FFFFFF"
-            android:layout_height="wrap_content">
-
+            android:id="@+id/scrollview">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,21 +58,81 @@
                 <ListView
                     android:id="@+id/listView"
                     android:layout_width="411dp"
-                    android:layout_height="512dp">
-                </ListView>
+                    android:layout_height="512dp"></ListView>
 
 
             </LinearLayout>
+
         </ScrollView>
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            >
+
+            <com.google.android.material.bottomappbar.BottomAppBar
+                android:id="@+id/app_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:backgroundTint="@color/green"
+                app:fabCradleMargin="8dp"
+                app:fabCradleRoundedCornerRadius="50dp"
+                app:fabCradleVerticalOffset="6dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    >
+
+                    <LinearLayout
+                        android:id="@+id/home_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.2"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginLeft="-17dp">
+
+                        <ImageView
+                            android:id="@+id/homemenu"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/home" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </com.google.android.material.bottomappbar.BottomAppBar>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigation_menu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/header"
-            app:menu="@menu/drawer_menu">
-        </com.google.android.material.navigation.NavigationView>
+            app:menu="@menu/drawer_menu" />
+
+
+
+
+
+
+
+
+
+
     </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
