--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="Enter Password"
+        android:inputType="textPassword"
 
 
         app:layout_constraintBottom_toBottomOf="parent"
